# pgs2srt

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  main.rs
src/srt/: error.rs  mod.rs  pgs_to_srt.rs
src/srt/helpers/: mod.rs  string_helper.rs  tiff_helper.rs
